# orders

./: .coveragerc  .gitignore  Jenkinsfile  README.md  manage.py  pyproject.toml  settings.json
reports/: pytest.xml
src/domain/: customer.py  entity.py  order.py
src/domain/core/: __init__.py  entity.py  result.py
src/domain/errors/: __init__.py  currency_error.py  email_error.py  min_length_error.py  required_error.py  uuid_error.py
src/domain/validation/: __init__.py  field_validator.py  validation_context.py  validation_rule.py  validator.py
src/domain/validation/rules/: __init__.py  currency_rule.py  email_rule.py  min_length_rule.py  required_rule.py  uuid_rule.py
src/order/application/dtos/: __init__.py
src/order/application/dtos/create/: __init__.py  create_order_input.py  create_order_output.py
src/order/application/ports/: __init__.py  order_repository.py
src/order/application/usecases/: __init__.py  create_order_use_case.py
src/order/domain/: customer.py  order.py  order_created_event.py
src/order/domain/events/: __init__.py  order_created_event.py
src/order/infrastructure/repositories/: __init__.py  in_memory_order_repository.py
src/order/main/: __init__.py  factory.py
src/shared/application/: __init__.py  use_case.py
src/shared/domain/core/: __init__.py  aggregate.py  entity.py  result.py
src/shared/domain/errors/: __init__.py  currency_error.py  email_error.py  min_length_error.py  required_error.py  uuid_error.py  validation_error.py
src/shared/domain/events/: __init__.py  domain_event.py  domain_event_handler.py  domain_event_publisher.py  event_dispatcher.py  event_publisher.py
src/shared/domain/validation/: __init__.py  field_validator.py  validation_context.py  validation_rule.py  validator.py
src/shared/domain/validation/rules/: __init__.py  currency_rule.py  email_rule.py  (+3 more)
src/shared/infrastructure/: console_event_publisher.py
tests/unit/domain/: test_customer.py  test_entity.py  test_order.py
tests/unit/domain/core/: test_entity.py  test_result.py
tests/unit/domain/errors/: __init__.py  test_validation_error.py
tests/unit/domain/validation/: __init__.py  test_field_validator.py  test_validation_context.py  test_validator.py
tests/unit/order/domain/: test_customer.py  test_order.py  test_order_created_event.py
tests/unit/shared/domain/: __init__.py
web/apps/orders/: apps.py  serializers.py  urls.py  views.py
web/config/: settings.py  urls.py
web/config/settings/: __init__.py  base.py  development.py  staging.py  testing.py
web/core/: container.py  exception_handler.py  response_utils.py
(+18 files in other folders)
