[project]
name = "orders"
version = "0.1.0"
description = "Orders management system"
authors = [
    {name = "Fernando Pioli",email = "fernandohrp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.9.10"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"] 

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"